updated trajectory evaluator

--- a/ATE_Lorris_txt.ipynb
+++ b/ATE_Lorris_txt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,21 +22,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trajectory is valid!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "groundtruth_path=\"./wxyz/trajectories/groundtruth.txt\"\n",
+    "trajectory_path=\"./wxyz/trajectories/allison_predict_boxes_translation.txt\"\n",
+    "\n",
+    "nerr= 0\n",
+    "with open(trajectory_path,\"r\") as fp:\n",
+    "    lll = fp.readlines()\n",
+    "    \n",
+    "    for i,l in enumerate(lll):\n",
+    "        if not len(l[:-1].split(\" \")) == 8:\n",
+    "            nerr+=1\n",
+    "            print(\"Line no.\",i,l)\n",
+    "        try:\n",
+    "            aaa = [float(t) for t in l[:-1].split(\" \")]\n",
+    "        except:\n",
+    "            nerr+=1\n",
+    "            print(\"Line no.\", i,l)\n",
+    "if nerr==0:\n",
+    "    print(\"Trajectory is valid!!\")\n",
+    "else:\n",
+    "    print(\"Trajectory is invalid!!\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# traj_ref = file_interface.read_tum_trajectory_file(DIR+\"groundtruth.txt\")\n",
-    "traj_ref = file_interface.read_tum_trajectory_file(\"../data/boxes_translation/groundtruth.txt\")\n",
-    "# traj_est = file_interface.read_tum_trajectory_file(\"../data/boxes_translation/frame_trajectory_orbslam2_rgb.txt\")\n",
-    "traj_est = file_interface.read_tum_trajectory_file(\"./boxes_translation/allison_predict_boxes_translation.txt\")\n",
-    "\n",
+    "#Read the groundtruth trajectory\n",
+    "traj_ref = file_interface.read_tum_trajectory_file(groundtruth_path)\n",
+    "#Read the estimated trajectory i.e. the one you created\n",
+    "traj_est = file_interface.read_tum_trajectory_file(trajectory_path)\n",
+    "#sync both the trajaectories\n",
     "traj_ref, traj_est = sync.associate_trajectories(traj_ref, traj_est, max_diff=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,10 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key \"text.kerning_factor\" on line 4 in\n",
+      "/home/rpl/anaconda3/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
+    "#run and ignore\n",
+    "\n",
     "from evo.tools import log\n",
     "log.configure_logging()\n",
     "# interactive widgets configuration\n",
@@ -107,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d3b94a655b84a3784dace54e8eb327e",
+       "model_id": "99c07d593dcc45bb9e2c6a4b25806d1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,6 +177,7 @@
     }
    ],
    "source": [
+    "#run and ignore\n",
     "\n",
     "count = 0\n",
     "results = []\n",
@@ -156,13 +208,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import os\n",
     "dd = \"../data/event_fused_pos_neg/\"\n",
@@ -177,6 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# traj_ref = file_interface.read_tum_trajectory_file(DIR+\"groundtruth.txt\")\n",
     "with open(dd+\"rgb.txt\", \"w\") as fp:\n",
     "    for i in range(len(ll)):\n",
     "        l = str(ts[i])+\" images/\"+ll[i]+\"\\n\"\n",
@@ -189,15 +235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "3527  -0.104964 0.00871518 0.00917347 0.900695 0.0406732 -0.00410594 -0.432665\n\n5757,,-0.0462941 0.32884 0.177633 0.857268 0.00818209 0.00885068 -0.516703\n\n9190,,0.0768912 -0.818106 0.0805707 -0.182489 0.5395937, 0.412868, 0.122264\n\n9189 0.0768912 -0.818106 0.0805707 -0.182489 0.5395937, 0.412868, 0.122264\n\n12300,,-0.0859314 -0.100471 0.484775 0.794509 -0.0248362 0.0265521 -0.606776\n\n21820,,\n\n21819 \n\n21821,,\n\n21820 \n\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"/Users/arpit/Spring20/SLAM_16833/project/data/boxes_translation/update_bag_translation_3.txt\",\"r\") as fp:\n",
     "    lll = fp.readlines()\n",
@@ -285,9 +325,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37464bitbaseconda4fd9fbb08e8548b5bd61d58b97d91730"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
